// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PricingButton component icon is component 1`] = `
<ForwardRef(Themed.Button)
  buttonStyle={
    Object {
      "backgroundColor": undefined,
      "marginBottom": 10,
      "marginTop": 15,
    }
  }
  icon={
    <Themed.Icon
      color="red"
      name="flight-takeoff"
      size={30}
    />
  }
  title="GET STARTED"
/>
`;

exports[`PricingButton component icon is object 1`] = `
<ForwardRef(Themed.Button)
  buttonStyle={
    Object {
      "backgroundColor": undefined,
      "marginBottom": 10,
      "marginTop": 15,
    }
  }
  disabled={true}
  icon={
    <Themed.Icon
      color="red"
      name="flight-takeoff"
      size={30}
    />
  }
  title="GET STARTED"
/>
`;

exports[`PricingButton component icon is string 1`] = `
<ForwardRef(Themed.Button)
  buttonStyle={
    Object {
      "backgroundColor": undefined,
      "marginBottom": 10,
      "marginTop": 15,
    }
  }
  icon={
    <Themed.Icon
      color="white"
      name="flight-takeoff"
      size={15}
    />
  }
  title="GET STARTED"
/>
`;

exports[`PricingCard component button with custom component 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 15,
      "padding": 15,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 0.5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <Themed.Text
      style={
        Object {
          "color": "#2089dc",
          "fontSize": 37.5,
          "fontWeight": "800",
          "textAlign": "center",
        }
      }
      testID="pricingCardTitle"
    />
    <Themed.Text
      style={
        Object {
          "fontSize": 50,
          "fontWeight": "700",
          "marginBottom": 10,
          "marginTop": 10,
          "textAlign": "center",
        }
      }
    />
    <ForwardRef(Themed.Button)
      disabled={true}
      title="GET STARTED"
    />
  </View>
</View>
`;

exports[`PricingCard component button with extended props 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 15,
      "padding": 15,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 0.5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <Themed.Text
      style={
        Object {
          "color": "#2089dc",
          "fontSize": 37.5,
          "fontWeight": "800",
          "textAlign": "center",
        }
      }
      testID="pricingCardTitle"
    />
    <Themed.Text
      style={
        Object {
          "fontSize": 50,
          "fontWeight": "700",
          "marginBottom": 10,
          "marginTop": 10,
          "textAlign": "center",
        }
      }
    />
    <PricingButton
      color="#2089dc"
      disabled={true}
      icon={
        Object {
          "color": "red",
          "name": "flight-takeoff",
          "size": 30,
        }
      }
      title="GET STARTED"
    />
  </View>
</View>
`;

exports[`PricingCard component should apply values from theme 1`] = `
<View
  replaceTheme={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 15,
      "padding": 15,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 0.5,
    }
  }
  updateTheme={[Function]}
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2089dc",
          "fontSize": 37.5,
          "fontWeight": "800",
          "textAlign": "center",
        }
      }
      testID="pricingCardTitle"
    >
      ALL YOU CAN EAT
    </Text>
    <Text
      style={
        Object {
          "color": "#242424",
          "fontSize": 50,
          "fontWeight": "700",
          "marginBottom": 10,
          "marginTop": 10,
          "textAlign": "center",
        }
      }
    >
      $0
    </Text>
    <Text
      style={
        Object {
          "color": "#86939e",
          "fontWeight": "600",
          "marginBottom": 5,
          "marginTop": 5,
          "textAlign": "center",
        }
      }
    >
      1 User
    </Text>
    <Text
      style={
        Object {
          "color": "#86939e",
          "fontWeight": "600",
          "marginBottom": 5,
          "marginTop": 5,
          "textAlign": "center",
        }
      }
    >
      Basic Support
    </Text>
    <Text
      style={
        Object {
          "color": "#86939e",
          "fontWeight": "600",
          "marginBottom": 5,
          "marginTop": 5,
          "textAlign": "center",
        }
      }
    >
      All Core Features
    </Text>
    <View
      style={
        Object {
          "borderRadius": 3,
          "overflow": "hidden",
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          Object {
            "busy": false,
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#2089dc",
              "borderColor": "#2089dc",
              "borderRadius": 3,
              "borderWidth": 0,
              "flexDirection": "row",
              "justifyContent": "center",
              "marginBottom": 10,
              "marginTop": 15,
              "padding": 8,
            }
          }
        >
          <View
            style={
              Object {
                "overflow": "hidden",
              }
            }
          >
            <View
              replaceTheme={[Function]}
              updateTheme={[Function]}
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "white",
                        "fontSize": 15,
                      },
                      Object {
                        "backgroundColor": "transparent",
                      },
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                  testID="iconIcon"
                >
                  
                </Text>
              </View>
            </View>
          </View>
          <Text
            style={
              Object {
                "color": "white",
                "fontSize": 18,
                "paddingBottom": 1,
                "paddingTop": 2,
                "textAlign": "center",
              }
            }
          >
            GET STARTED
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PricingCard component should render titleStyle 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 15,
      "padding": 15,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 0.5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <Themed.Text
      style={
        Object {
          "color": "#2089dc",
          "fontSize": 37.5,
          "fontWeight": "800",
          "textAlign": "center",
        }
      }
      testID="pricingCardTitle"
    />
    <Themed.Text
      style={
        Object {
          "fontSize": 50,
          "fontWeight": "700",
          "marginBottom": 10,
          "marginTop": 10,
          "textAlign": "center",
        }
      }
    />
    <Themed.Text
      key="1 User"
      style={
        Object {
          "color": "#86939e",
          "fontWeight": "600",
          "marginBottom": 5,
          "marginTop": 5,
          "textAlign": "center",
        }
      }
    >
      1 User
    </Themed.Text>
    <Themed.Text
      key="Basic Support"
      style={
        Object {
          "color": "#86939e",
          "fontWeight": "600",
          "marginBottom": 5,
          "marginTop": 5,
          "textAlign": "center",
        }
      }
    >
      Basic Support
    </Themed.Text>
    <Themed.Text
      key="All Core Features"
      style={
        Object {
          "color": "#86939e",
          "fontWeight": "600",
          "marginBottom": 5,
          "marginTop": 5,
          "textAlign": "center",
        }
      }
    >
      All Core Features
    </Themed.Text>
    <PricingButton
      color="#2089dc"
      icon="flight-takeoff"
      title="GET STARTED"
      titleStyle={
        Object {
          "fontSize": 30,
        }
      }
    />
  </View>
</View>
`;

exports[`PricingCard component should render with props 1`] = `
<View
  style={
    Object {
      "backgroundColor": "peru",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 15,
      "padding": 15,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 0.5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "peru",
      }
    }
  >
    <Themed.Text
      style={
        Object {
          "color": "#2089dc",
          "fontFamily": "arial",
          "fontSize": 37.5,
          "fontWeight": "800",
          "textAlign": "center",
        }
      }
      testID="pricingCardTitle"
    >
      Free
    </Themed.Text>
    <Themed.Text
      style={
        Object {
          "fontFamily": "arial",
          "fontSize": 50,
          "fontWeight": "700",
          "marginBottom": 10,
          "marginTop": 10,
          "textAlign": "center",
        }
      }
    >
      $0
    </Themed.Text>
    <Themed.Text
      key="1 User"
      style={
        Object {
          "color": "#86939e",
          "fontFamily": "arial",
          "fontWeight": "600",
          "marginBottom": 5,
          "marginTop": 5,
          "textAlign": "center",
        }
      }
    >
      1 User
    </Themed.Text>
    <Themed.Text
      key="Basic Support"
      style={
        Object {
          "color": "#86939e",
          "fontFamily": "arial",
          "fontWeight": "600",
          "marginBottom": 5,
          "marginTop": 5,
          "textAlign": "center",
        }
      }
    >
      Basic Support
    </Themed.Text>
    <Themed.Text
      key="All Core Features"
      style={
        Object {
          "color": "#86939e",
          "fontFamily": "arial",
          "fontWeight": "600",
          "marginBottom": 5,
          "marginTop": 5,
          "textAlign": "center",
        }
      }
    >
      All Core Features
    </Themed.Text>
    <PricingButton
      color="#2089dc"
      icon="flight-takeoff"
      title="GET STARTED"
    />
  </View>
</View>
`;

exports[`PricingCard component should render without info 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 15,
      "padding": 15,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 0.5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <Themed.Text
      style={
        Object {
          "color": "#2089dc",
          "fontSize": 37.5,
          "fontWeight": "800",
          "textAlign": "center",
        }
      }
      testID="pricingCardTitle"
    />
    <Themed.Text
      style={
        Object {
          "fontSize": 50,
          "fontWeight": "700",
          "marginBottom": 10,
          "marginTop": 10,
          "textAlign": "center",
        }
      }
    />
    <PricingButton
      color="#2089dc"
      icon="flight-takeoff"
      title="GET STARTED"
    />
  </View>
</View>
`;

exports[`PricingCard component should render without issues 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#e1e8ee",
      "borderWidth": 1,
      "margin": 15,
      "marginBottom": 15,
      "padding": 15,
      "shadowColor": "rgba(0,0,0, .2)",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 0.5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <Themed.Text
      style={
        Object {
          "color": "#2089dc",
          "fontSize": 37.5,
          "fontWeight": "800",
          "textAlign": "center",
        }
      }
      testID="pricingCardTitle"
    />
    <Themed.Text
      style={
        Object {
          "fontSize": 50,
          "fontWeight": "700",
          "marginBottom": 10,
          "marginTop": 10,
          "textAlign": "center",
        }
      }
    />
    <Themed.Text
      key="1 User"
      style={
        Object {
          "color": "#86939e",
          "fontWeight": "600",
          "marginBottom": 5,
          "marginTop": 5,
          "textAlign": "center",
        }
      }
    >
      1 User
    </Themed.Text>
    <Themed.Text
      key="Basic Support"
      style={
        Object {
          "color": "#86939e",
          "fontWeight": "600",
          "marginBottom": 5,
          "marginTop": 5,
          "textAlign": "center",
        }
      }
    >
      Basic Support
    </Themed.Text>
    <Themed.Text
      key="All Core Features"
      style={
        Object {
          "color": "#86939e",
          "fontWeight": "600",
          "marginBottom": 5,
          "marginTop": 5,
          "textAlign": "center",
        }
      }
    >
      All Core Features
    </Themed.Text>
    <PricingButton
      color="#2089dc"
      icon="flight-takeoff"
      title="GET STARTED"
    />
  </View>
</View>
`;
